--- a/shared/style.css
+++ b/shared/style.css
@@ -1,3 +1,13 @@
+#tip{
+ position : absolute;
+ border : 1px solid gray;
+ background-color : #efefef;
+ padding : 3px;
+ z-index: 1000;
+ /* set this to create word wrap */
+ max-width: 200px;
+}
+
 body {
   font-family: Palatino, Verdana, Times New Roman, Helvetica, sans-serif;
   font-size: 100%;
@@ -114,6 +124,7 @@ body {
   bottom: 0px;
   left: 370px;
   font-size: 85%;
+  width: 300px;
 }
 
 .tiny { 
