rm 'www.' from 'www.elloracaves.org' -- use MAMP in india

--- a/admin/shared/style.css
+++ b/admin/shared/style.css
@@ -1,6 +1,6 @@
 body.home {
         background-color: #000000; 
-        background-image: url("http://www.elloracaves.org/images/c5_H7.jpg");
+        background-image: url("http://elloracaves.org/images/c5_H7.jpg");
         background-repeat: no-repeat;
         background-position: 0px 100px;
         font-family: Palatino, Verdana, Times New Roman, Helvetica, sans-serif;
